<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/global"
                android:textSize="22dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="false"
                android:text="@string/platform"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/ischeckstation"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/cb_ischeckstation"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textSize="22dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_reboot"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/reboot"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_memory"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/memory"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_emmc"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/emmc"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_receiver"
                android:layout_width="match_parent"
               android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/receiver"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_battery"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/battery"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_audio"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/audio"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_vibrator"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/vibrator"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_Camera"
                android:layout_width="match_parent"
               android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/camera"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_video"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/video"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_lcd"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/lcd"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_gps"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/gps"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_bt"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/bt"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_wifi"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/wifi"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_light"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/light"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_proximity"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/proximity"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_gravity"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/gravity"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_fullbattery"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/full_battery"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />
            
            <TextView
                android:id="@+id/setting_backlight"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/backlight"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />
            <TextView
                android:id="@+id/setting_quickcharge"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/quickcharge"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/setting_screensave"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:text="@string/screensave"
                android:textSize="20dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="22dp" />
            
             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/test_with_charger"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/cb_testwithcharger"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </LinearLayout>
             <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />
             
             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_setting_base_battery"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/base_battery"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_setting_base_battery_value"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:text="50"
                    android:textSize="20sp"
                  />
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />
            
                   <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_setting_battery_low_limit"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/battery_low_limit"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_setting_battery_low_limit_value"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:text="65"
                    android:textSize="20sp"
                  />
            </LinearLayout>
            
                   <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#000000"
                android:visibility="visible" />
                             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_setting_battery_high_limit"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/battery_high_limit"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_setting_battery_high_limit_value"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:text="70"
                    android:textSize="20sp"
                  />
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>